# mediakit

./: .gitignore  LICENSE.md  README.md  README_jp.md  pyproject.toml
docs/premiere_uxp_bridge/: agent-architecture.md  mcp-tools.md
docs/transcription/: mlx-whisper-selection.md
gospelo_mediakit/: __init__.py  cli.py  mcp_server.py  premiere_mcp_server.py
gospelo_mediakit/core/: __init__.py  color_match.py  errors.py  ffmpeg.py  frames.py  sample_color.py  speed.py
gospelo_mediakit/premiere/: __init__.py  bridge.py  mogrt.py  srt.py
gospelo_mediakit/tools/: __init__.py  change_speed.py  color_match.py  extract_frames.py
mcp-server/gospelo-mediakit/: README.md  pyproject.toml  setup_venv.sh
mcp-server/gospelo-mediakit/src/gospelo_mediakit_mcp/: __init__.py  server.py
premiere_uxp_bridge/: README.md  index.html  index.js  manifest.json
scripts/: create_premiere_bridge_cert.sh  make_telop_mogrt.py
skills/: setup.sh
skills/claude/gospelo-mediakit/: skill.md
skills/codex/gospelo-mediakit/: SKILL.md
tests/: test_color_match.py  test_frames.py  test_premiere_bridge.py  test_premiere_telop.py  test_premiere_tools.py  test_probe.py  test_sample_color.py  test_speed.py
