[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gospelo-mediakit"
version = "0.1.0"
description = "Handy tools for video-production work, bundled as an MCP server and CLI (first/last frame extraction, speed change). Works with Claude Code, Claude Desktop and Codex."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "gospelo" }]
keywords = ["video", "ffmpeg", "frame-extraction", "mcp", "claude", "codex"]
# Pure subprocess over the ffmpeg/ffprobe binaries — no Python media deps.
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0", "pytest>=8.0"]

[project.scripts]
gospelo-mediakit = "gospelo_mediakit.cli:main"

[project.urls]
Repository = "https://github.com/gospelo-dev/mediakit"

[tool.hatch.build.targets.wheel]
packages = ["gospelo_mediakit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
